--- a/smoky/css/style.css
+++ b/smoky/css/style.css
@@ -187,8 +187,10 @@ header {
   justify-content: flex-start;
   align-items: center;
 }
-.header__phone img {
+.header__phone i {
   margin-right: 6px;
+  color: #3a424b;
+  font-size: 22px;
 }
 .header__phone a {
   color: #3a424b;
@@ -237,8 +239,12 @@ header {
   align-items: center;
   margin-bottom: 3px;
 }
-.header__24 img {
+.header__24 i {
   margin-left: 5px;
+  width: 17px;
+  height: 17px;
+  background-image: url(../img/icon_24-hours.svg);
+  background-size: 100% 100%;
 }
 .header__city {
   margin-bottom: 10px;
@@ -301,8 +307,10 @@ header {
 .search__close {
   position: absolute;
   right: 6px;
-  top: 11px;
+  top: 9px;
   cursor: pointer;
+  color: #aeaeae;
+  font-size: 14px;
 }
 .search button {
   width: 34px;
@@ -315,6 +323,10 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.search button i {
+  color: #ffffff;
+  font-size: 14px;
 }
 
 .htabs {
@@ -400,7 +412,7 @@ header {
   display: inline-block;
   width: 35px;
   height: 35px;
-  background: url(../img/basket.png) center center no-repeat;
+  background: url(../img/icon_basket.svg) center center no-repeat;
 }
 .htabs__img_4:hover i {
   background: url(../img/basketh.png) center center no-repeat;
@@ -1148,6 +1160,80 @@ h3 {
   justify-content: flex-start;
   margin-right: 10px;
 }
+.sidenav__svg_1 {
+  background-image: url(../img/icon_hookah.svg);
+  background-size: contain;
+  width: 16px;
+  height: 25px;
+}
+.sidenav__svg_2 {
+  background-image: url(../img/icon_tobaccoo.svg);
+  background-size: contain;
+  background-size: 100% 100%;
+  width: 21px;
+  height: 14px;
+}
+.sidenav__svg_3 {
+  background-image: url(../img/icon_coal.svg);
+  background-size: contain;
+  width: 21px;
+  height: 17px;
+}
+.sidenav__svg_4 {
+  background-image: url(../img/icon_accessories.svg);
+  background-size: contain;
+  width: 21px;
+  height: 21px;
+}
+.sidenav__svg_5 {
+  background-image: url(../img/icon_smoking-blends.svg);
+  background-size: contain;
+  background-size: 100% 100%;
+  width: 20px;
+  height: 16px;
+}
+.sidenav__svg_6 {
+  background-image: url(../img/icon_kolba.svg);
+  background-size: contain;
+  width: 14px;
+  height: 19px;
+}
+.sidenav__svg_7 {
+  background-image: url(../img/icon_elHookah.svg);
+  background-size: contain;
+  width: 22px;
+  height: 22px;
+}
+.sidenav__svg_8 {
+  background-image: url(../img/icon_vape.svg);
+  background-size: contain;
+  width: 12px;
+  height: 24px;
+}
+.sidenav__svg_9 {
+  background-image: url(../img/icon_vapeWater.svg);
+  background-size: contain;
+  width: 10px;
+  height: 22px;
+}
+.sidenav__svg_10 {
+  background-image: url(../img/icon_game.svg);
+  background-size: contain;
+  width: 22px;
+  height: 22px;
+}
+.sidenav__svg_11 {
+  background-image: url(../img/icon_tea.svg);
+  background-size: contain;
+  width: 22px;
+  height: 14px;
+}
+.sidenav__svg_12 {
+  background-image: url(../img/icon_candy.svg);
+  background-size: contain;
+  width: 22px;
+  height: 21px;
+}
 .sidenav__more {
   position: absolute;
   right: 10px;
@@ -1216,13 +1302,13 @@ h3 {
 .ui-slider .ui-slider-handle {
   position: absolute;
   z-index: 2;
-  width: 23px;
-  /* Задаем нужную ширину */
-  height: 23px;
-  /* и высоту */
-  background: url(../img/handle.png) no-repeat;
-  /* картинка изображающая ползунок. Или можно залить цветом, задать бордюр и скругления */
+  width: 14px;
+  height: 14px;
+  border-radius: 100%;
+  border: 2px solid #fff;
+  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.2);
   cursor: pointer;
+  background: #3b205c;
 }
 
 .ui-slider .ui-slider-range {
@@ -1242,7 +1328,7 @@ h3 {
 
 /* позиционируем ползунки */
 .ui-slider-horizontal .ui-slider-handle {
-  top: -10px;
+  top: -6px;
   margin-left: -6px;
 }
 
@@ -1335,6 +1421,9 @@ h3 {
   height: 17px;
   cursor: pointer;
 }
+.colorbox_w i {
+  color: #000 !important;
+}
 .colorbox_bl {
   border-bottom: 1px solid #a2a2a2;
   background: #000;
@@ -1414,6 +1503,19 @@ h3 {
   width: 16px;
   height: 17px;
   cursor: pointer;
+}
+.colorbox__item i {
+  display: none;
+  color: #fff;
+}
+.colorbox__item_active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.colorbox__item_active i {
+  font-size: 10px;
+  display: inline-block;
 }
 
 .brand {
@@ -1973,6 +2075,7 @@ h3 {
   width: calc(100% - 10px);
   bottom: 5px;
   text-transform: uppercase;
+  color: #3b205c;
 }
 .catgoods__item a:before, .catgoods__item a:after {
   content: '';
@@ -2538,6 +2641,106 @@ h3 {
   font-size: 13px;
   font-weight: 300;
   line-height: normal;
+}
+
+#container {
+  position: relative;
+}
+
+div.jqcloud span {
+  color: #626262 !important;
+  font-family: 'Roboto', sans-serif !important;
+  font-weight: 300 !important;
+}
+
+div.jqcloud span#demo_word_0,
+div.jqcloud span#demo1_word_0,
+div.jqcloud span#demo2_word_0 {
+  font-size: 21px !important;
+}
+
+div.jqcloud span#demo_word_1,
+div.jqcloud span#demo1_word_1,
+div.jqcloud span#demo2_word_1 {
+  font-size: 13px !important;
+}
+
+div.jqcloud span#demo_word_2,
+div.jqcloud span#demo1_word_2,
+div.jqcloud span#demo2_word_2 {
+  font-size: 39px !important;
+}
+
+div.jqcloud span#demo_word_3,
+div.jqcloud span#demo1_word_3,
+div.jqcloud span#demo2_word_3 {
+  font-size: 13px !important;
+}
+
+div.jqcloud span#demo_word_4,
+div.jqcloud span#demo1_word_4,
+div.jqcloud span#demo2_word_4 {
+  font-size: 16px !important;
+}
+
+div.jqcloud span#demo_word_5,
+div.jqcloud span#demo1_word_5,
+div.jqcloud span#demo2_word_5 {
+  font-size: 20px !important;
+}
+
+div.jqcloud span#demo_word_6,
+div.jqcloud span#demo1_word_6,
+div.jqcloud span#demo2_word_6 {
+  font-size: 12px !important;
+}
+
+div.jqcloud span#demo_word_7,
+div.jqcloud span#demo1_word_7,
+div.jqcloud span#demo2_word_7 {
+  font-size: 13px !important;
+}
+
+div.jqcloud span#demo_word_8,
+div.jqcloud span#demo1_word_8,
+div.jqcloud span#demo2_word_8 {
+  font-size: 20px !important;
+}
+
+div.jqcloud span#demo_word_9,
+div.jqcloud span#demo1_word_9,
+div.jqcloud span#demo2_word_9 {
+  font-size: 17px !important;
+}
+
+div.jqcloud span#demo_word_10,
+div.jqcloud span#demo1_word_10,
+div.jqcloud span#demo2_word_10 {
+  font-size: 11px !important;
+}
+
+div.jqcloud span#demo_word_11,
+div.jqcloud span#demo1_word_11,
+div.jqcloud span#demo2_word_11 {
+  font-size: 8px !important;
+}
+
+div.jqcloud span#demo_word_12,
+div.jqcloud span#demo1_word_12,
+div.jqcloud span#demo2_word_12 {
+  font-size: 16px !important;
+}
+
+div.jqcloud span#demo_word_13,
+div.jqcloud span#demo1_word_13,
+div.jqcloud span#demo2_word_13 {
+  font-size: 17px !important;
+}
+
+div.jqcloud span#demo_word_14,
+div.jqcloud span#demo1_word_14,
+div.jqcloud span#demo2_word_14 {
+  font-size: 13px !important;
 }
 
 /*Information end*/
@@ -3107,6 +3310,138 @@ h3 {
   margin-top: 10px;
 }
 
+.goodinfo {
+  margin-bottom: 45px;
+}
+
+.product {
+  display: flex;
+}
+.product .sp-wrap {
+  border: 0;
+  background: none;
+  margin-right: 7px;
+}
+.product .sp-large {
+  margin-left: 50px;
+  height: 280px !important;
+  width: 216px !important;
+  border: 1px solid #cfcfcf;
+  border-radius: 8px;
+}
+.product .sp-thumbs {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+}
+.product .sp-thumbs a {
+  width: 43px;
+  height: 56px;
+  border: 1px solid #cfcfcf;
+  margin-bottom: 7px;
+}
+.product__center {
+  margin-right: 15px;
+}
+.product__item {
+  border: 1px solid #cfcfcf;
+  border-radius: 8px;
+  padding: 15px;
+  padding-top: 20px;
+  position: relative;
+}
+.product__item_top {
+  margin-bottom: 7px;
+}
+.product__toolbox {
+  top: 40px;
+}
+.product__tool {
+  width: 35px;
+  height: 35px;
+}
+.product__tool i {
+  font-size: 21px;
+  color: #a2a5a6;
+}
+.product__price {
+  color: #2d2d2d;
+  font-family: 'Roboto', sans-serif;
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+.product__colors {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 3px;
+}
+.product__colorbox {
+  color: #2d2d2d;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.product__colorbox_r {
+  padding: 3px;
+  padding-right: 7px;
+  border: 1px solid #d01a2d;
+  border-radius: 15px;
+  margin-right: 5px;
+}
+.product__color {
+  width: 16px;
+  height: 16px;
+  border-radius: 100%;
+  margin-right: 5px;
+  color: #fff;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.product__color_r {
+  background: #d01a2d;
+}
+.product__color_blu {
+  background: #1321ae;
+}
+.product__color_black {
+  background: #363637;
+}
+.product__subtitle {
+  margin-bottom: 5px;
+  color: #2d2d2d;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+}
+.product__amount {
+  justify-content: flex-start;
+  margin-bottom: 8px;
+}
+.product__infobox p {
+  color: #2d2d2d;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  padding: 5px 0;
+  border-bottom: 1px solid #cbc6ca;
+  line-height: normal;
+}
+.product__infobox p:last-child {
+  border-bottom: 0;
+}
+.product__infobox p span {
+  font-weight: 500;
+}
+
 .goodreview__title {
   color: #515151;
   font-family: 'Roboto', sans-serif;
@@ -3203,107 +3538,297 @@ h3 {
   margin-top: 15px;
 }
 
-#container {
+.viewed, .interesting {
+  border: 1px solid #cfcfcf;
+  border-radius: 8px;
+  padding: 0 40px;
+  margin-bottom: 45px;
+}
+.viewed__title, .interesting__title {
+  color: #484747;
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  background: #fff;
+  padding: 0 20px;
+  display: inline-block;
   position: relative;
+  top: -19px;
+  left: -20px;
 }
-
-div.jqcloud span {
-  color: #626262 !important;
-  font-family: 'Roboto', sans-serif !important;
-  font-weight: 300 !important;
+.viewed .slick-prev, .interesting .slick-prev {
+  height: 69px;
+  width: 26px;
+  background: #aeaeae;
+  border-radius: 3px;
+  border-bottom: 2px solid #626262;
+  position: absolute;
+  left: -28px;
+  top: 114px;
 }
-
-div.jqcloud span#demo_word_0,
-div.jqcloud span#demo1_word_0,
-div.jqcloud span#demo2_word_0 {
-  font-size: 21px !important;
+.viewed .slick-prev i, .interesting .slick-prev i {
+  color: #fff;
+  font-size: 34px;
 }
-
-div.jqcloud span#demo_word_1,
-div.jqcloud span#demo1_word_1,
-div.jqcloud span#demo2_word_1 {
-  font-size: 13px !important;
+.viewed .slick-next, .interesting .slick-next {
+  height: 69px;
+  width: 26px;
+  background: #aeaeae;
+  border-radius: 3px;
+  border-bottom: 2px solid #626262;
+  position: absolute;
+  right: -30px;
+  top: 114px;
 }
-
-div.jqcloud span#demo_word_2,
-div.jqcloud span#demo1_word_2,
-div.jqcloud span#demo2_word_2 {
-  font-size: 39px !important;
-}
-
-div.jqcloud span#demo_word_3,
-div.jqcloud span#demo1_word_3,
-div.jqcloud span#demo2_word_3 {
-  font-size: 13px !important;
-}
-
-div.jqcloud span#demo_word_4,
-div.jqcloud span#demo1_word_4,
-div.jqcloud span#demo2_word_4 {
-  font-size: 16px !important;
-}
-
-div.jqcloud span#demo_word_5,
-div.jqcloud span#demo1_word_5,
-div.jqcloud span#demo2_word_5 {
-  font-size: 20px !important;
-}
-
-div.jqcloud span#demo_word_6,
-div.jqcloud span#demo1_word_6,
-div.jqcloud span#demo2_word_6 {
-  font-size: 12px !important;
-}
-
-div.jqcloud span#demo_word_7,
-div.jqcloud span#demo1_word_7,
-div.jqcloud span#demo2_word_7 {
-  font-size: 13px !important;
-}
-
-div.jqcloud span#demo_word_8,
-div.jqcloud span#demo1_word_8,
-div.jqcloud span#demo2_word_8 {
-  font-size: 20px !important;
-}
-
-div.jqcloud span#demo_word_9,
-div.jqcloud span#demo1_word_9,
-div.jqcloud span#demo2_word_9 {
-  font-size: 17px !important;
-}
-
-div.jqcloud span#demo_word_10,
-div.jqcloud span#demo1_word_10,
-div.jqcloud span#demo2_word_10 {
-  font-size: 11px !important;
-}
-
-div.jqcloud span#demo_word_11,
-div.jqcloud span#demo1_word_11,
-div.jqcloud span#demo2_word_11 {
-  font-size: 8px !important;
-}
-
-div.jqcloud span#demo_word_12,
-div.jqcloud span#demo1_word_12,
-div.jqcloud span#demo2_word_12 {
-  font-size: 16px !important;
-}
-
-div.jqcloud span#demo_word_13,
-div.jqcloud span#demo1_word_13,
-div.jqcloud span#demo2_word_13 {
-  font-size: 17px !important;
-}
-
-div.jqcloud span#demo_word_14,
-div.jqcloud span#demo1_word_14,
-div.jqcloud span#demo2_word_14 {
-  font-size: 13px !important;
+.viewed .slick-next i, .interesting .slick-next i {
+  color: #fff;
+  font-size: 34px;
 }
 
 /*Cart_goods page*/
+/*Goods page*/
+.goods__typecont {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+.goods__type {
+  width: 95px;
+  margin-right: 14px;
+  margin-bottom: 15px;
+}
+.goods__type:nth-child(8n) {
+  margin-right: 0;
+}
+.goods__type p {
+  color: #2d2d2d;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  text-align: center;
+  line-height: normal;
+}
+.goods__img {
+  width: 95px;
+  height: 95px;
+  border: 1px solid #b6b6b6;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  margin-bottom: 7px;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.17);
+}
+
+.filterbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.removefilter {
+  display: flex;
+  justify-content: flex-start;
+}
+.removefilter__item {
+  background: #f3f3f3;
+  border: 1px solid #dddddd;
+  border-radius: 10px;
+  padding: 0 8px;
+  height: 24px;
+  margin-right: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.removefilter__item_white {
+  background: #fff;
+}
+.removefilter span {
+  color: #2d2d2d;
+  font-family: 'Roboto', sans-serif;
+  font-size: 11px;
+  font-weight: 300;
+}
+.removefilter__icon {
+  width: 16px;
+  height: 16px;
+  border-radius: 100%;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10px;
+  cursor: pointer;
+}
+.removefilter__icon i {
+  font-size: 9.93px;
+  color: #c6c6c6;
+}
+
+.sortby {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.sortby__p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 11px;
+  font-weight: 300;
+  color: #2d2d2d;
+  line-height: normal;
+  margin-right: 15px;
+}
+
+.select2 {
+  width: 150px;
+  height: 23px;
+  border: 1px solid #dddddd;
+  border-radius: 2px;
+  list-style: none;
+  cursor: pointer;
+  display: flex;
+  display: inline-block;
+  background: #fff;
+  vertical-align: top;
+  position: relative;
+  z-index: 5;
+}
+.select2 i {
+  position: absolute;
+  right: 6px;
+  top: 4px;
+  font-size: 14px;
+  color: #3b3b3b;
+}
+.select2__item {
+  display: none;
+  z-index: 5;
+  padding-left: 10px;
+  border: 1px solid #c7c7c7;
+  border-top: 0;
+  height: 23px;
+  background: #f3f3f3;
+  color: #626262;
+  font-family: 'Roboto', sans-serif;
+  font-size: 11px;
+  font-weight: 300;
+  line-height: 21px;
+}
+.select2__item:not(.select__item_init) {
+  float: left;
+  width: 150px;
+  margin-left: -1px;
+  display: none;
+}
+.select2__item_init {
+  padding-left: 10px;
+  background: none;
+  color: #626262;
+  font-family: 'Roboto', sans-serif;
+  font-size: 11px;
+  font-weight: 300;
+  line-height: 21px;
+  border-radius: 2px;
+  z-index: 5;
+  position: relative;
+}
+.select2__item_active {
+  display: block;
+  order: 2;
+}
+.select2__item_show {
+  display: block;
+}
+
+.select2 li:not(.select2__item_init):hover,
+.select2 li.selected:not(.select2__item_init) {
+  background: #3b205c;
+  color: #fff;
+}
+
+.select2 li.select2__item_init {
+  cursor: pointer;
+}
+
+.gcont {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+.gcont__item {
+  width: 200px;
+  margin-bottom: 30px;
+  margin-right: 20px;
+}
+.gcont__item:nth-child(4n) {
+  margin-right: 0;
+}
+
+.goodpager {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+.goodpager__prev, .goodpager__next, .goodpager__main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #a91c5f;
+  height: 31px;
+}
+.goodpager__prev i, .goodpager__next i, .goodpager__main i {
+  font-size: 20px;
+  color: #fff;
+}
+.goodpager__prev a, .goodpager__next a, .goodpager__main a {
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 23px;
+  height: 23px;
+  margin: 0 5px;
+}
+.goodpager__prev a:hover, .goodpager__next a:hover, .goodpager__main a:hover {
+  background: #fff;
+  color: #bd3c7a;
+}
+.goodpager__prev {
+  margin-right: 1px;
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+  width: 31px;
+  cursor: pointer;
+}
+.goodpager__next {
+  margin-left: 1px;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+  width: 31px;
+  cursor: pointer;
+}
+
+.goodstext {
+  border: 1px solid #cdcdcd;
+  border-radius: 8px;
+  padding: 15px 40px 15px 50px;
+}
+.goodstext p {
+  font: 14px NP;
+  color: #aeaeae;
+  line-height: normal;
+}
+
+/*Goods page end*/
 /*Modal*/
 .modalform {
   width: 550px;
@@ -3512,9 +4037,9 @@ div.jqcloud span#demo2_word_14 {
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0.54;
-  -moz-opacity: 0.54;
-  filter: alpha(opacity=54);
+  opacity: 0.24;
+  -moz-opacity: 0.24;
+  filter: alpha(opacity=24);
   z-index: 15;
   overflow: hidden;
   display: none;
@@ -3668,6 +4193,31 @@ div.jqcloud span#demo2_word_14 {
   }
 
   /*Cart page end*/
+  /*Cart__good page*/
+  .description {
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+
+  /*Cart__good page end*/
+  /*Goods page*/
+  .goods__typecont {
+    justify-content: center;
+  }
+  .goods__type:nth-child(8n) {
+    margin-right: 14px;
+  }
+
+  .gcont {
+    justify-content: center;
+  }
+  .gcont__item:nth-child(4n) {
+    margin-right: 20px;
+  }
+
+  /*Goods page end*/
 }
 @media screen and (max-width: 767px) {
   .content .wrapper {
@@ -3850,4 +4400,81 @@ div.jqcloud span#demo2_word_14 {
   }
 
   /*Cart page end*/
+  /*Cart__good page*/
+  .breadcrumbs {
+    flex-wrap: wrap;
+  }
+  .breadcrumbs a {
+    line-height: 18px;
+  }
+
+  .product {
+    flex-direction: column;
+    align-items: center;
+  }
+  .product__center {
+    margin-right: 0;
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  .product__infobox {
+    margin-bottom: 15px;
+  }
+
+  .description {
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+  .description__item {
+    flex-direction: column;
+  }
+
+  .goodreview__inputcont {
+    flex-direction: column;
+  }
+  .goodreview__inputbox {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  .goodreview__input {
+    width: 100%;
+  }
+
+  /*Cart__good page end*/
+  /*Goods page*/
+  .goods__typecont {
+    justify-content: center;
+  }
+  .goods__type {
+    margin-left: 14px;
+  }
+  .goods__type:nth-child(8n) {
+    margin-right: 14px;
+  }
+
+  .gcont {
+    justify-content: center;
+  }
+  .gcont__item {
+    margin-left: 20px;
+  }
+  .gcont__item:nth-child(4n) {
+    margin-right: 20px;
+  }
+
+  .viewed__title, .interesting__title {
+    font-size: 15px;
+    line-height: normal;
+  }
+
+  .goodstext {
+    padding: 15px 20px 15px 30px;
+  }
+  .goodstext p {
+    font-size: 13px;
+  }
+
+  /*Goods page end*/
 }
