--- a/smoky/css/style.css
+++ b/smoky/css/style.css
@@ -176,8 +176,8 @@ header {
   font-size: 25px;
 }
 .header__logo {
-  margin-right: 60px;
-  margin-left: 18px;
+  width: 275px;
+  text-align: center;
 }
 .header__cont {
   margin-right: 15px;
@@ -186,11 +186,6 @@ header {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-}
-.header__phone i {
-  margin-right: 6px;
-  color: #3a424b;
-  font-size: 22px;
 }
 .header__phone a {
   color: #3a424b;
@@ -207,7 +202,6 @@ header {
   font-size: 10px;
   font-weight: 700;
   text-transform: uppercase;
-  padding-left: 26px;
   line-height: 12px;
 }
 .header__call {
@@ -328,6 +322,9 @@ header {
   color: #ffffff;
   font-size: 14px;
 }
+.search button:hover {
+  background: #8f8f8f;
+}
 
 .htabs {
   display: flex;
@@ -361,8 +358,8 @@ header {
   position: relative;
 }
 .htabs__item_4 .htabs__img span {
-  top: 12px;
-  left: 17px;
+  top: 11px;
+  left: 18.5px;
 }
 .htabs__item_4 p {
   box-shadow: 0px 10px 0px 0px white;
@@ -384,38 +381,15 @@ header {
   font-weight: 400;
   position: absolute;
 }
-.htabs__img:hover span {
+.htabs__img_active span {
   color: #a91c5f;
 }
 .htabs__img_1 span {
   top: 17px;
 }
-.htabs__img_1 i {
-  display: inline-block;
-  width: 39px;
-  height: 34px;
-  background: url(../img/heart.png) center center no-repeat;
-}
-.htabs__img_1:hover i {
-  background: url(../img/hearth.png) center center no-repeat;
-}
-.htabs__img_3 i {
-  display: inline-block;
-  width: 39px;
-  height: 42px;
-  background: url(../img/user.png) center center no-repeat;
-}
-.htabs__img_3:hover i {
-  background: url(../img/userh.png) center center no-repeat;
-}
-.htabs__img_4 i {
-  display: inline-block;
-  width: 35px;
-  height: 35px;
-  background: url(../img/icon_basket.svg) center center no-repeat;
-}
-.htabs__img_4:hover i {
-  background: url(../img/basketh.png) center center no-repeat;
+.htabs__img_2 span {
+  top: 11px;
+  margin-left: -0.5px;
 }
 
 .loginpop, .registerpop {
@@ -987,7 +961,7 @@ footer {
   justify-content: flex-start;
   -webkit-justify-content: flex-start;
   -ms-flex-pack: start;
-  background: url(../img/bg.jpg) center center no-repeat;
+  background: url(../img/bg.jpg) top center no-repeat;
   background-size: cover;
 }
 
@@ -1157,7 +1131,7 @@ h3 {
   width: 22px;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   margin-right: 10px;
 }
 .sidenav__svg_1 {
@@ -1240,9 +1214,14 @@ h3 {
   top: 10px;
   cursor: pointer;
   padding: 0px 5px;
+  width: 14px;
+  transition: all .2s ease-in-out;
 }
 .sidenav__more_active {
   transform: rotate(90deg);
+}
+.sidenav__more:hover {
+  transform: rotate(720deg);
 }
 
 .sidefilters {
@@ -1282,13 +1261,19 @@ h3 {
 .sidefilters__more_active i {
   transform: rotate(180deg);
 }
+.sidefilters__more:hover {
+  background: #8f8f8f;
+}
+.sidefilters__more:hover i {
+  color: #fff;
+}
 .sidefilters__akcii .brand__item {
   padding: 0 13px;
 }
 
 /*UI slider*/
 /* Ширина слайдера */
-#slider {
+#slider, #slider2, #slider3, #slider4, #slider5 {
   width: 200px;
   margin: 0 auto;
 }
@@ -1518,35 +1503,43 @@ h3 {
   display: inline-block;
 }
 
-.brand {
+.allfilters {
   padding-left: 39px;
   display: none;
 }
-.brand__title {
+.allfilters__title {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-right: 0;
 }
-.brand__item {
+.allfilters__item {
   margin: 12px 0;
   margin-right: 19px;
   display: inline-block;
   vertical-align: top;
 }
-.brand__item_check {
+.allfilters__item_check {
   display: inline-block;
   width: 100%;
   max-width: 250px;
   margin: 4px 0;
 }
-.brand__item_check label:before {
+.allfilters__item_check label:before {
   top: 1px;
 }
-.brand__checkbox {
+.allfilters_2 {
+  padding-left: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.checkbox {
   display: none;
 }
-.brand__checkboxlabel {
+
+.checkboxlabel {
   display: inline-block;
   cursor: pointer;
   position: relative;
@@ -1557,7 +1550,7 @@ h3 {
   font-weight: 300;
   color: #2d2d2d;
 }
-.brand__checkboxlabel:before {
+.checkboxlabel:before {
   content: "";
   border-radius: 3px;
   display: inline-block;
@@ -1570,13 +1563,14 @@ h3 {
   bottom: 3px;
 }
 
-.brand__checkbox:checked + .brand__checkboxlabel:before {
+.checkbox:checked + .checkboxlabel:before {
   content: url(../img/check.png);
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
   font-size: 15px;
   color: #f3f3f3;
   text-align: center;
   line-height: 6px;
+  box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.1) inset;
 }
 
 .usedf {
@@ -1629,6 +1623,12 @@ h3 {
 .usedf__close i {
   color: #b0b0b0;
   font-size: 8px;
+}
+.usedf__close:hover {
+  background: #8f8f8f;
+}
+.usedf__close:hover i {
+  color: #fff;
 }
 .usedf .showmore {
   height: 31px;
@@ -1738,6 +1738,9 @@ h3 {
   text-transform: uppercase;
   line-height: 28px;
 }
+.interview__cont {
+  position: relative;
+}
 .interview__tabs {
   display: flex;
   flex-direction: column;
@@ -1745,6 +1748,12 @@ h3 {
   background: #dddddd;
   float: left;
   min-height: 235px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 31px;
 }
 .interview__tab {
   color: #595959;
@@ -1860,7 +1869,7 @@ h3 {
 }
 
 .maincont {
-  width: 895px;
+  width: 892px;
   background: #fff;
 }
 
@@ -1880,9 +1889,10 @@ h3 {
 }
 .mainnav ul ul {
   display: block;
+  width: auto;
 }
 .mainnav li {
-  display: inline-block;
+  display: block;
   padding: 8px 15px;
   border-radius: 30px;
 }
@@ -1988,6 +1998,12 @@ h3 {
   padding-left: 67px;
   width: 425px;
 }
+.slider .slick-prev:hover {
+  background: none !important;
+}
+.slider .slick-next:hover {
+  background: none !important;
+}
 
 .slick-prev {
   background: none;
@@ -1996,6 +2012,9 @@ h3 {
   top: 176px;
   position: absolute;
   z-index: 3;
+}
+.slick-prev:hover {
+  background: #8f8f8f !important;
 }
 
 .slick-next {
@@ -2008,6 +2027,9 @@ h3 {
 }
 .slick-next img {
   transform: rotate(180deg);
+}
+.slick-next:hover {
+  background: #8f8f8f !important;
 }
 
 .slick-dots {
@@ -2077,28 +2099,39 @@ h3 {
   text-transform: uppercase;
   color: #3b205c;
 }
-.catgoods__item a:before, .catgoods__item a:after {
-  content: '';
+.catgoods__item a span {
+  background: #fff;
+  position: relative;
+  z-index: 5;
   display: inline-block;
-  vertical-align: middle;
-  box-sizing: border-box;
+  box-shadow: 0px 0px 0px 7px white;
+}
+.catgoods__item a .border {
   width: 100%;
   height: 1px;
   background: #3b205c;
-  border: solid #fff;
-  border-width: 0 5px;
-}
-.catgoods__item a:before {
-  margin-left: -100%;
-}
-.catgoods__item a:after {
-  margin-right: -100%;
+  position: absolute;
+  top: 47%;
+  left: 0;
 }
 .catgoods__img {
   overflow: hidden;
 }
+.catgoods__img a {
+  position: static;
+}
+.catgoods__img a:before {
+  content: none;
+}
+.catgoods__img a:after {
+  content: none;
+}
 .catgoods__img img {
   margin-left: -6px;
+  transition: all .2s ease-in-out;
+}
+.catgoods__img img:hover {
+  transform: scale(1.1);
 }
 
 /*Good categories end*/
@@ -2208,6 +2241,9 @@ h3 {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.popular__amount span:hover {
+  background: #8f8f8f;
 }
 .popular__amount span i {
   color: #fff;
@@ -2633,6 +2669,7 @@ h3 {
   color: #aeaeae;
   text-transform: uppercase;
   margin-bottom: 10px;
+  margin-top: 8px;
 }
 .types__text {
   color: #626262;
@@ -2958,6 +2995,12 @@ div.jqcloud span#demo2_word_14 {
   align-items: center;
   cursor: pointer;
 }
+.carttable__remove:hover {
+  background: #8f8f8f;
+}
+.carttable__remove:hover img {
+  filter: brightness(2);
+}
 
 .perinfo {
   width: 320px;
@@ -3018,10 +3061,18 @@ div.jqcloud span#demo2_word_14 {
   margin-right: 11px;
 }
 .perinfo__input input.perinfo_phone2 {
-  width: calc(100% - 65px);
+  width: 100%;
 }
-.perinfo__input input.perinfo_phone2::placeholder {
-  line-height: 10px;
+.perinfo__input label.perinfo_label2 {
+  z-index: 100;
+  cursor: text;
+  position: absolute;
+  top: 9px;
+  left: 15px;
+  color: #aeaeae;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  font-weight: 400;
 }
 .perinfo__input textarea {
   padding: 5px 15px;
@@ -3057,6 +3108,11 @@ div.jqcloud span#demo2_word_14 {
 }
 .perinfo__checkboxlabel a {
   color: #3b205c;
+}
+.perinfo__p2cont {
+  display: inline-block;
+  width: calc(100% - 65px);
+  position: relative;
 }
 
 .perinfo__checkbox:checked + .perinfo__checkboxlabel:before {
@@ -3118,12 +3174,15 @@ div.jqcloud span#demo2_word_14 {
   background: #fff;
   box-shadow: inset 0px 0px 3px 1px rgba(225, 225, 225, 0.75);
 }
+.delivery__checkcont [type="radio"]:checked + label:before {
+  border: 1px solid #000;
+}
 .delivery__checkcont [type="radio"]:checked + label:after,
 .delivery__checkcont [type="radio"]:not(:checked) + label:after {
   content: '';
   width: 8px;
   height: 8px;
-  background: #aeaeae;
+  background: #000;
   position: absolute;
   top: 3px;
   left: -76px;
@@ -3829,6 +3888,279 @@ div.jqcloud span#demo2_word_14 {
 }
 
 /*Goods page end*/
+/*Constructor page*/
+.constructor {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 35px;
+}
+.constructor__main {
+  position: relative;
+  width: 318px;
+  height: 561px;
+  border: 1px solid #cfcfcf;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.17);
+}
+.constructor__mainimg {
+  position: absolute;
+  left: 55px;
+  top: 53px;
+}
+.constructor__item {
+  width: 504px;
+}
+.constructor__top {
+  margin-bottom: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.constructor__part {
+  width: 74px;
+  height: 74px;
+  border-radius: 7px;
+  border: 1px solid #d0d0d0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.17);
+}
+.constructor__part:hover {
+  border-color: #3b205c;
+  background: #3b205c;
+  box-shadow: 0px 2px 0px 0px black;
+}
+.constructor__part:hover img {
+  filter: brightness(2);
+}
+.constructor__part_active {
+  border-color: #3b205c;
+  background: #3b205c;
+  box-shadow: 0px 2px 0px 0px black;
+}
+.constructor__part_active img {
+  filter: brightness(2);
+}
+.constructor .slick-slider {
+  padding: 15px 15px;
+  padding-bottom: 0;
+  border: 1px solid #cdcdcd;
+  border-radius: 8px;
+}
+.constructor .slick-prev {
+  height: 69px;
+  width: 26px;
+  background: #aeaeae;
+  border-radius: 3px;
+  border-bottom: 2px solid #626262;
+  position: absolute;
+  left: -13px;
+  top: 200px;
+}
+.constructor .slick-prev i {
+  color: #fff;
+  font-size: 34px;
+}
+.constructor .slick-next {
+  height: 69px;
+  width: 26px;
+  background: #aeaeae;
+  border-radius: 3px;
+  border-bottom: 2px solid #626262;
+  position: absolute;
+  right: -13px;
+  top: 200px;
+}
+.constructor .slick-next i {
+  color: #fff;
+  font-size: 34px;
+}
+
+.const__item {
+  width: 150px !important;
+  margin-bottom: 20px;
+  box-shadow: 0 0 0 0;
+  margin-right: 3px;
+  margin-left: 4px;
+}
+.const__img {
+  height: 133px;
+}
+.const__name {
+  margin-bottom: 0;
+}
+.const__name p {
+  font-size: 12px;
+  line-height: normal;
+}
+.const__price {
+  font-size: 14px;
+}
+.const__price i {
+  font-size: 14px;
+}
+.const__choose {
+  font-size: 11px;
+  width: 120px;
+}
+.const__toolbox {
+  top: 15px;
+}
+.const__pprice {
+  margin-bottom: -5px;
+}
+.const__title {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #000;
+  line-height: normal;
+}
+
+.kalitem {
+  position: absolute;
+  z-index: 3;
+}
+.kalitem img {
+  display: none;
+}
+.kalitem:hover img {
+  display: block;
+}
+.kalitem_1 {
+  top: 53px;
+  left: 172px;
+  width: 75px;
+  height: 37px;
+}
+.kalitem_2 {
+  left: 192px;
+  top: 94px;
+  width: 37px;
+  height: 48px;
+}
+.kalitem_3 {
+  left: 153px;
+  top: 143px;
+  width: 115px;
+  height: 27px;
+}
+.kalitem_4 {
+  left: 175px;
+  top: 171px;
+  width: 67px;
+  height: 169px;
+}
+.kalitem_5 {
+  left: 55px;
+  bottom: 38px;
+  width: 215px;
+  height: 334px;
+  z-index: 2;
+}
+.kalitem_6 {
+  bottom: 66px;
+  left: 131px;
+  width: 159px;
+  height: 157px;
+}
+.kalitem__img_active {
+  display: block !important;
+}
+.kalitem__title {
+  position: absolute;
+  z-index: 4;
+  display: block !important;
+}
+.kalitem__title:hover + img {
+  display: block;
+}
+.kalitem__title_1 {
+  left: -149px;
+  top: -25px;
+}
+.kalitem__title_2 {
+  left: -168px;
+  top: -28px;
+}
+.kalitem__title_3 {
+  left: -129px;
+  top: -41px;
+}
+.kalitem__title_4 {
+  left: -151px;
+  top: -30px;
+}
+.kalitem__title_5 {
+  left: -31px;
+  top: 96px;
+}
+.kalitem__title_6 {
+  left: -107px;
+  top: 68px;
+}
+
+.constselected {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  margin-bottom: 35px;
+}
+.constselected__item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 415px;
+  padding: 15px 0;
+  border-bottom: 1px solid #aeaeae;
+}
+.constselected__img {
+  width: 52px;
+  height: 52px;
+  border-radius: 5px;
+  border: 1px solid #cfcfcf;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.constselected__info {
+  width: 320px;
+}
+.constselected__info p {
+  color: #484747;
+  font-family: 'Roboto', sans-serif;
+  font-size: 13px;
+  font-weight: 300;
+}
+.constselected__info p span {
+  font-weight: 500;
+}
+
+.consttotal p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  color: #000;
+  text-transform: uppercase;
+}
+.consttotal p span {
+  text-transform: none;
+  font-weight: 400;
+  display: inline-block;
+  margin-left: 10px;
+}
+.consttotal .showmore {
+  display: inline-block;
+  height: 31px;
+  margin-top: 15px;
+}
+
+/*Constructor page end*/
 /*Modal*/
 .modalform {
   width: 550px;
@@ -4218,6 +4550,41 @@ div.jqcloud span#demo2_word_14 {
   }
 
   /*Goods page end*/
+  /*Constructor page*/
+  .constructor {
+    justify-content: center;
+  }
+  .constructor__main {
+    margin-right: 20px;
+  }
+  .constructor__item {
+    width: 400px;
+  }
+  .constructor__part {
+    width: 60px;
+    height: 60px;
+  }
+  .constructor__part img {
+    zoom: 0.8;
+  }
+  .constructor__top {
+    flex-wrap: wrap;
+  }
+  .constructor__part {
+    margin-bottom: 10px;
+  }
+  .constructor .slick-slide {
+    text-align: center;
+  }
+
+  .constselected__item {
+    width: 350px;
+  }
+  .constselected__info {
+    width: 265px;
+  }
+
+  /*Constructor page end*/
 }
 @media screen and (max-width: 767px) {
   .content .wrapper {
@@ -4477,4 +4844,34 @@ div.jqcloud span#demo2_word_14 {
   }
 
   /*Goods page end*/
+  /*Constructor page*/
+  .constructor {
+    flex-direction: column;
+  }
+  .constructor__main {
+    border: 0;
+    box-shadow: 0 0 0 0;
+  }
+  .constructor__item {
+    width: 100%;
+    flex-direction: column;
+  }
+  .constructor__top {
+    flex-wrap: wrap;
+  }
+  .constructor__part {
+    margin-bottom: 15px;
+  }
+  .constructor .slick-slide {
+    text-align: center;
+  }
+
+  .constselected__item {
+    width: 100%;
+  }
+  .constselected__img {
+    margin-right: 10px;
+  }
+
+  /*Constructor page end*/
 }
