--- a/smoky/scss/layout/_content.scss
+++ b/smoky/scss/layout/_content.scss
@@ -1,4 +1,3 @@
-
 //main styles
 
 .main-wrapper{
@@ -19,7 +18,7 @@
 	justify-content:flex-start;	
     -webkit-justify-content:flex-start;	
     -ms-flex-pack: start;
-    background: url(../img/bg.jpg) center center no-repeat;
+    background: url(../img/bg.jpg) top center no-repeat;
     background-size: cover;
 }
 .wrapper{
@@ -151,7 +150,7 @@ h3{
 		width: 22px;
 		display: flex;
 		align-items: center;
-		justify-content: flex-start;
+		justify-content: center;
 		margin-right: 10px;
 	}
 	&__svg{
@@ -236,8 +235,13 @@ h3{
     	top: 10px;
     	cursor: pointer;
     	padding: 0px 5px;
+		width: 14px;
+		transition: all .2s ease-in-out;
     	&_active{
     		transform: rotate(90deg);
+    	}
+    	&:hover{
+    		transform: rotate(720deg);
     	}
 	}
 }
@@ -278,6 +282,12 @@ h3{
 				transform: rotate(180deg);
 			}
 		}
+		&:hover{
+			background: #8f8f8f;
+			i{
+				color: #fff;
+			}
+		}
 	}
 	&__akcii{
 		.brand__item{
@@ -287,7 +297,7 @@ h3{
 }
 /*UI slider*/
 /* Ширина слайдера */
-#slider {
+#slider,#slider2,#slider3,#slider4,#slider5 {
 	width: 200px;
 	margin: 0 auto;
 }
@@ -507,7 +517,7 @@ h3{
 	}
 
 }
-.brand{
+.allfilters{
 	padding-left: 39px;
 	display: none;
 	&__title{
@@ -531,40 +541,47 @@ h3{
 		    }
 		}
 	}
-	&__checkbox{
-		display: none;
-	}
-	&__checkboxlabel{
-		display: inline-block;
-		cursor: pointer;
-		position: relative;
-		padding-left: 25px;
-		margin-right: 15px;
-		font-family: "Roboto", sans-serif;
-		font-size: 14px;
-		font-weight: 300;
-		color: #2d2d2d;
-		&:before{
-			content: "";
-			border-radius: 3px;
-    		display: inline-block;
-    		width: 12px;
-    		height: 12px;
-    		border: 1px solid #aeaeae;
-    		margin-right: 8px;
-    		position: absolute;
-    		left: 0;
-    		bottom: 3px;
-		}
+	&_2{
+		padding-left: 15px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
 	}
 }
-.brand__checkbox:checked + .brand__checkboxlabel:before{
+.checkbox{
+	display: none;
+}
+.checkboxlabel{
+	display: inline-block;
+	cursor: pointer;
+	position: relative;
+	padding-left: 25px;
+	margin-right: 15px;
+	font-family: "Roboto", sans-serif;
+	font-size: 14px;
+	font-weight: 300;
+	color: #2d2d2d;
+	&:before{
+		content: "";
+		border-radius: 3px;
+   		display: inline-block;
+   		width: 12px;
+   		height: 12px;
+   		border: 1px solid #aeaeae;
+   		margin-right: 8px;
+   		position: absolute;
+    	left: 0;
+   		bottom: 3px;
+	}
+}
+.checkbox:checked + .checkboxlabel:before{
 	content: url(../img/check.png);
     text-shadow: 1px 1px 1px rgba(0, 0, 0, .2);
     font-size: 15px;
     color: #f3f3f3;
     text-align: center;
     line-height: 6px;
+    box-shadow: 0 0 0 9999px rgba(0,0,0,0.1) inset;
 }
 .usedf{
 	margin-bottom: 10px;
@@ -617,6 +634,12 @@ h3{
 	    	color: #b0b0b0;
 		    font-size: 8px;
 	    }
+	    &:hover{
+			background: #8f8f8f;
+			i{
+				color: #fff;
+			}
+		}
 	}
 	.showmore{
 		height: 31px;
@@ -722,6 +745,9 @@ h3{
 	    text-transform: uppercase;
 	    line-height: 28px;
 	}
+	&__cont{
+		position: relative;
+	}
 	&__tabs{
 		display: flex;
 		flex-direction: column;
@@ -729,6 +755,12 @@ h3{
 		background: #dddddd;
 		float: left;
 		min-height: 235px;
+		position: absolute;
+		left: 0;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		width: 31px;
 	}
 	&__tab{
 		color: #595959;
@@ -846,7 +878,7 @@ h3{
 	}
 }
 .maincont{
-	width: 895px;
+	width: 892px;
 	background: #fff;
 }
 .mainnav{
@@ -863,10 +895,11 @@ h3{
     	justify-content: space-around;
     	ul{
     		display: block;
+    		width: auto;
     	}
 	}
 	li{
-		display: inline-block;
+		display: block;
 		padding: 8px 15px;
 		border-radius: 30px;
 		&:hover{
@@ -974,6 +1007,16 @@ h3{
     		width: 425px;
     	}
 	}
+	.slick-prev{
+		&:hover{
+    		background: none !important;
+    	}
+	}
+	.slick-next{
+		&:hover{
+    		background: none !important;
+    	}
+	}
 }
 .slick-prev{
 	background: none;
@@ -982,6 +1025,9 @@ h3{
     top: 176px;
     position: absolute;
     z-index: 3;
+    &:hover{
+    	background: #8f8f8f !important;
+    }
 }
 .slick-next{
 	background: none;
@@ -993,6 +1039,9 @@ h3{
 	img{
 		transform: rotate(180deg);
 	}
+	&:hover{
+    	background: #8f8f8f !important;
+    }
 }
 .slick-dots{
 	position: absolute;
@@ -1056,29 +1105,40 @@ h3{
     		bottom: 5px;
     		text-transform: uppercase;
     		color: #3b205c;
-		    &:before,&:after{
-		    	content: '';
-			    display: inline-block;
-			    vertical-align: middle;
-			    box-sizing: border-box;
-			    width: 100%;
-			    height: 1px;
-			    background: #3b205c;
-			    border: solid #fff;
-			    border-width: 0 5px;
+		    span{
+		    	background: #fff;
+		    	position: relative;
+    			z-index: 5;
+    			display: inline-block;
+    			box-shadow: 0px 0px 0px 7px rgba(255,255,255,1);
 		    }
-		    &:before{
-		    	margin-left: -100%;
-		    }
-		    &:after{
-		    	margin-right: -100%;
+		    .border{
+		    	width: 100%;
+		    	height: 1px;
+		    	background: #3b205c;
+		    	position: absolute;
+		    	top: 47%;
+		    	left: 0;
 		    }
 		}
 	}
 	&__img{
 		overflow: hidden;
+		a{
+			position: static;
+			&:before{
+				content: none;
+			}
+			&:after{
+				content: none;
+			}
+		}
 		img{
 			margin-left: -6px;
+			transition: all .2s ease-in-out;
+			&:hover{
+				transform: scale(1.1);
+			}
 		}
 	}
 }
@@ -1190,6 +1250,9 @@ h3{
 			display: flex;
     		justify-content: center;
     		align-items: center;
+    		&:hover{
+    			background: #8f8f8f;
+    		}
     		i{
     			color: #fff;
     			font-size: 10px;
@@ -1619,6 +1682,7 @@ h3{
 		color: #aeaeae;
 		text-transform: uppercase;
 		margin-bottom: 10px;
+		margin-top: 8px;
 	}
 	&__text{
 		color: #626262;
@@ -1930,6 +1994,12 @@ div.jqcloud span#demo2_word_14{
 		justify-content: center;
 		align-items: center;
 		cursor: pointer;
+		&:hover{
+			background: #8f8f8f;
+			img{
+				filter: brightness(2);
+			}
+		}
 	}
 }
 .perinfo{
@@ -1989,10 +2059,18 @@ div.jqcloud span#demo2_word_14{
 			margin-right: 11px;
 		}
 		input.perinfo_phone2{
-			width: calc(100% - 65px);
-			&::placeholder{
-				line-height: 10px;
-			}
+			width: 100%;
+		}
+		label.perinfo_label2{
+			z-index: 100;
+			cursor: text;
+			position: absolute;
+			top: 9px;
+			left: 15px;
+			color: #aeaeae;
+		    font-family: 'Roboto', sans-serif;
+		    font-size: 12px;
+		    font-weight: 400;
 		}
 		textarea{
 			padding: 5px 15px;
@@ -2029,6 +2107,11 @@ div.jqcloud span#demo2_word_14{
 		a{
 			color: #3b205c;
 		}
+	}
+	&__p2cont{
+		display: inline-block;
+		width: calc(100% - 65px);
+		position: relative;
 	}
 }
 .perinfo__checkbox:checked + .perinfo__checkboxlabel:before{
@@ -2090,12 +2173,15 @@ div.jqcloud span#demo2_word_14{
 		    background: #fff;
 		    box-shadow: inset 0px 0px 3px 1px rgba(225, 225, 225, 0.75);
 		}
+		[type="radio"]:checked + label:before{
+			border: 1px solid #000;
+		}
 		[type="radio"]:checked + label:after,
 		[type="radio"]:not(:checked) + label:after {
 		    content: '';
 		    width: 8px;
 		    height: 8px;
-		    background: #aeaeae;
+		    background: #000;
 		    position: absolute;
 		    top: 3px;
 		    left: -76px;
@@ -2794,6 +2880,282 @@ div.jqcloud span#demo2_word_14{
 	}
 }
 /*Goods page end*/
+/*Constructor page*/
+.constructor{
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	margin-bottom: 35px;
+	&__main{
+		position: relative;
+		width: 318px;
+		height: 561px;
+		border: 1px solid #cfcfcf;
+		border-radius: 5px;
+		box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.17);
+	}
+	&__mainimg{
+		position: absolute;
+		left: 55px;
+    	top: 53px;
+	}
+	&__item{
+		width: 504px;
+	}
+	&__top{
+		margin-bottom: 8px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+	&__part{
+		width: 74px;
+		height: 74px;
+		border-radius: 7px;
+		border: 1px solid #d0d0d0;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		cursor: pointer;
+		box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.17);
+		&:hover{
+			border-color: #3b205c;
+			background: #3b205c;
+			box-shadow: 0px 2px 0px 0px rgba(0,0,0,1);
+			img{
+				filter: brightness(2);
+			}
+		}
+		&_active{
+			border-color: #3b205c;
+			background: #3b205c;
+			box-shadow: 0px 2px 0px 0px rgba(0,0,0,1);
+			img{
+				filter: brightness(2);
+			}
+		}
+	}
+	.slick-slider{
+		padding: 15px 15px;
+		padding-bottom: 0;
+		border: 1px solid #cdcdcd;
+		border-radius: 8px;
+	}
+	.slick-prev{
+		height: 69px;
+	    width: 26px;
+	    background: #aeaeae;
+	    border-radius: 3px;
+	    border-bottom: 2px solid #626262;
+	    position: absolute;
+	    left: -13px;
+	    top: 200px;
+	    i{
+	    	color: #fff;
+    		font-size: 34px;
+	    }
+	}
+	.slick-next{
+		height: 69px;
+	    width: 26px;
+	    background: #aeaeae;
+	    border-radius: 3px;
+	    border-bottom: 2px solid #626262;
+	    position: absolute;
+	    right: -13px;
+	    top: 200px;
+	    i{
+	    	color: #fff;
+    		font-size: 34px;
+	    }
+	}
+}
+.const{
+	&__item{
+		width: 150px !important;
+		margin-bottom: 20px;
+		box-shadow: 0 0 0 0;
+		margin-right: 3px;
+    	margin-left: 4px;
+	}
+	&__img{
+		height: 133px;
+	}
+	&__name{
+		margin-bottom: 0;
+		p{
+			font-size: 12px;
+			line-height: normal;
+		}
+	}
+	&__price{
+		font-size: 14px;
+		i{
+			font-size: 14px;
+		}
+	}
+	&__choose{
+		font-size: 11px;
+		width: 120px;
+	}
+	&__toolbox{
+		top: 15px;
+	}
+	&__pprice{
+		margin-bottom: -5px;
+	}
+	&__title{
+		font-family: 'Roboto', sans-serif;
+		font-size: 16px;
+		font-weight: 500;
+		text-transform: uppercase;
+		color: #000;
+		line-height: normal;
+	}
+}
+.kalitem{
+	position: absolute;
+	z-index: 3;
+	img{
+		display: none;
+	}
+	&:hover{
+		img{
+			display: block;
+		}
+	}
+	&_1{
+		top: 53px;
+    	left: 172px;
+    	width: 75px;
+    	height: 37px;
+	}
+	&_2{
+		left: 192px;
+    	top: 94px;
+    	width: 37px;
+    	height: 48px;
+	}
+	&_3{
+		left: 153px;
+    	top: 143px;
+    	width: 115px;
+    	height: 27px;
+	}
+	&_4{
+		left: 175px;
+    	top: 171px;
+    	width: 67px;
+    	height: 169px;
+	}
+	&_5{
+		left: 55px;
+    	bottom: 38px;
+    	width: 215px;
+    	height: 334px;
+    	z-index: 2;
+	}
+	&_6{
+		bottom: 66px;
+    	left: 131px;
+    	width: 159px;
+    	height: 157px;
+	}
+	&__img{
+		&_active{
+			display: block !important;
+		}
+	}
+	&__title{
+		position: absolute;
+		z-index: 4;
+		display: block !important;
+		&:hover + img{
+			display: block;
+		}
+		&_1{
+    		left: -149px;
+    		top: -25px;
+		}
+		&_2{
+    		left: -168px;
+    		top: -28px;
+		}
+		&_3{
+    		left: -129px;
+    		top: -41px;
+		}
+		&_4{
+    		left: -151px;
+    		top: -30px;
+		}
+		&_5{
+    		left: -31px;
+    		top: 96px;
+		}
+		&_6{
+    		left: -107px;
+    		top: 68px;
+		}
+	}
+}
+.constselected{
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	flex-wrap: wrap;
+	margin-bottom: 35px;
+	&__item{
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		width: 415px;
+		padding: 15px 0;
+		border-bottom: 1px solid #aeaeae;
+	}
+	&__img{
+		width: 52px;
+		height: 52px;
+		border-radius: 5px;
+		border: 1px solid #cfcfcf;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+	&__info{
+		width: 320px;
+		p{
+			color: #484747;
+			font-family: 'Roboto', sans-serif;
+			font-size: 13px;
+			font-weight: 300;
+			span{
+				font-weight: 500;
+			}
+		}
+	}
+}
+.consttotal{
+	p{
+		font-family: 'Roboto', sans-serif;
+		font-size: 16px;
+		font-weight: 500;
+		color: #000;
+		text-transform: uppercase;
+		span{
+			text-transform: none;
+			font-weight: 400;
+			display: inline-block;
+			margin-left: 10px;
+		}
+	}
+	.showmore{
+		display: inline-block;
+		height: 31px;
+		margin-top: 15px;
+	}
+}
+/*Constructor page end*/
 
 /*Modal*/
 .modalform{
@@ -3194,6 +3556,41 @@ div.jqcloud span#demo2_word_14{
 		}
 	}
 	/*Goods page end*/
+	/*Constructor page*/
+	.constructor{
+		justify-content: center;
+		&__main{
+			margin-right: 20px;
+		}
+		&__item{
+			width: 400px;
+		}
+		&__part{
+			width: 60px;
+    		height: 60px;
+    		img{
+    			zoom: 0.8;
+    		}
+		}
+		&__top{
+			flex-wrap: wrap;
+		}
+		&__part{
+			margin-bottom: 10px;
+		}
+		.slick-slide{
+			text-align: center;
+		}
+	}
+	.constselected{
+		&__item{
+			width: 350px;
+		}
+		&__info{
+			width: 265px;
+		}
+	}
+	/*Constructor page end*/
 }
 
 @media screen and (max-width: 767px) {
@@ -3457,6 +3854,36 @@ div.jqcloud span#demo2_word_14{
 		}
 	}
 	/*Goods page end*/
+	/*Constructor page*/
+	.constructor{
+		flex-direction: column;
+		&__main{
+			border: 0;
+    		box-shadow: 0 0 0 0;
+		}
+		&__item{
+			width: 100%;
+			flex-direction: column;
+		}
+		&__top{
+			flex-wrap: wrap;
+		}
+		&__part{
+			margin-bottom: 15px;
+		}
+		.slick-slide{
+			text-align: center;
+		}
+	}
+	.constselected{
+		&__item{
+			width: 100%;
+		}
+		&__img{
+			margin-right: 10px;
+		}
+	}
+	/*Constructor page end*/
 }
 
 
